--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=jsp-gram
-#Server Properties
 server.port=80
-#Database Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/jspgram?createDatabaseIfNotExist=true
+
+spring.datasource.url=jdbc:mysql://mysql-db:3306/jspgram?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.jakarta.persistence.validation.mode=none
-#Email Properties
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=Your Email
