--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,23 +4,26 @@ services:
   mysql-db:
     image: mysql:8
     container_name: mysql-db
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: jspgram
     ports:
       - "3306:3306"
     networks:
-      - spring-net
+      - app-network
 
   springapp:
     image: geethar27/springapp:latest
     container_name: springapp
     depends_on:
       - mysql-db
+    restart: always
     ports:
-      - "9090:80"
+      - "80:80"
     networks:
-      - spring-net
+      - app-network
 
 networks:
-  spring-net:
+  app-network:
+    driver: bridge
