Change SMTP username and password in properties
Updated email configuration for SMTP settings.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.show-sql=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=Your Email
-spring.mail.password=Your App Password
+spring.mail.username=geethar272003@gmail.com
+spring.mail.password=Geetha@4321
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
