--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=geethar272003@gmail.com
-spring.mail.password=ozop fngq zumg anao
+spring.mail.password=ozopfngqzxumganao
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
